--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@actions/io": "^1.1.3",
     "@modelcontextprotocol/sdk": "^1.13.2",
     "diff": "^8.0.3",
+    "undici": "^6.23.0",
     "zod": "^3.24.5"
   },
   "devDependencies": {
@@ -50,5 +51,8 @@
     "ts-jest": "^29.2.5",
     "typescript": "^5.6.0",
     "typescript-eslint": "^8.19.1"
+  },
+  "overrides": {
+    "undici": "^6.23.0"
   }
 }
